# the-maintence-engine-v2

./: .gitignore  CLAUDE.local.md  CLAUDE.md  Cargo.toml  LICENSE  MASTER_INDEX.md  README.md  SCAFFOLDING_MASTER_PLAN.md
.claude/: ALIGNMENT_VERIFICATION.md  context.json  patterns.json  status.json
ai_docs/: ADVANCED_EVOLUTION_CHAMBER_V2.md  ANTI_PATTERNS.md  GOLD_STANDARD_PATTERNS.md  HABITAT_NEXUS_PLUGIN_SPEC.md  HABITAT_NEXUS_PLUGIN_SPEC_v2.md  HABITAT_NEXUS_PLUGIN_SPEC_v2_1.md  INDEX.md  INTERNET_GOLD_STANDARDS.md  META_TREE_MIND_MAP_M48_M57.md  META_TREE_MIND_MAP_V2.md  NEXUS_EXEMPLARS.md  QUICKSTART.md  RUST_EXEMPLARS.md  SESSION_068_RECOMMENDATIONS.md  SESSION_069_IMPLEMENTATION_PLAN.md
ai_specs/: API_SPEC.md  DATABASE_SPEC.md  ESCALATION_SPEC.md  HABITAT_INTEGRATION_SPEC.md  HOOKS_SPEC.md  INDEX.md  LAYER_SPEC.md  M1_M2_UNIFIED_ARCHITECTURE.md  MODULE_MATRIX.md  NAM_SPEC.md  PBFT_SPEC.md  PIPELINE_SPEC.md  SECURITY_SPEC.md  SERVICE_SPEC.md  STDP_SPEC.md  SYSTEM_SPEC.md  TENSOR_SPEC.md
benches/: database_operations.rs  health_monitoring.rs  hebbian_learning.rs  lock_contention.rs  pbft_consensus.rs  pipeline_execution.rs  service_registry.rs  tensor_encoding.rs
config/: database.toml  default.toml  dev.toml  learning.toml  logging.toml  observer.toml  prod.toml  services.toml  staging.toml  tensor.toml
habitat-nexus/: Cargo.toml  build_deploy.sh
habitat-nexus/src/: alerts.rs  arms.rs  coordination.rs  dashboard.rs  discovery.rs  main.rs  protocol.rs  workers.rs
hooks/: orac-hook.sh
migrations/: 001_service_tracking.sql  002_system_synergy.sql  003_hebbian_pulse.sql  004_consensus_tracking.sql  005_episodic_memory.sql  006_tensor_memory.sql  007_performance_metrics.sql  008_flow_state.sql  009_security_events.sql  010_workflow_tracking.sql  011_evolution_tracking.sql
nam/: ACTIVE_LEARNING.md  AGENT_ROLES.md  DISSENT_GENERATION.md  EPISODIC_MEMORY.md  HEBBIAN_INTEGRATION.md  HUMAN_AS_AGENT.md  L0_AUTO_REMEDIATION.md  PBFT_CONSENSUS.md  SELF_MODEL.md  TENSOR_ENCODING.md
src/: database.rs  engine.rs  lib.rs  main.rs
tests/: cross_layer_workflows.rs  database_integration.rs  engine_integration.rs  g1_wiring_integration.rs  g2_persistence_integration.rs  g4_crosscut_integration.rs  l1_foundation_integration.rs  l2_services_integration.rs  l3_core_logic_integration.rs  l4_integration_layer.rs  l5_learning_integration.rs  l6_consensus_integration.rs  l7_observer_integration.rs  property_tests.rs  stress_test.rs  tensor_integration.rs  tools_integration.rs
vault/: 00 — Project Status.md  01 — Architecture Overview.md  02 — Build & Quality Gate.md  03 — Module Map.md  04 — Database Inventory.md  05 — Design Constraints.md  Anti-Patterns.md  Gold Standard Patterns.md  HOME.md  Internet Gold Standards.md  L1 — Foundation Layer.md  L2 — Services Layer.md  (+16 more)
(+228 files in other folders)
